// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/manager/mix/artifacts authenticates to private repositories 1`] = `
[
  {
    "file": {
      "contents": "New mix.lock",
      "path": "mix.lock",
      "type": "addition",
    },
  },
]
`;

exports[`modules/manager/mix/artifacts authenticates to private repositories 2`] = `
[
  {
    "cmd": "docker ps --filter name=renovate_sidecar -aq",
    "options": {
      "encoding": "utf-8",
    },
  },
  {
    "cmd": "docker run --rm --name=renovate_sidecar --label=renovate_child -v "/tmp/github/some/repo":"/tmp/github/some/repo" -v "/tmp/cache":"/tmp/cache" -e BUILDPACK_CACHE_DIR -w "/tmp/github/some/repo" renovate/sidecar bash -l -c "install-tool erlang 24.3.4.2 && install-tool elixir v1.13.4 && mix hex.organization auth renovate_test --key valid_test_token && mix deps.update private_package other_package"",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "BUILDPACK_CACHE_DIR": "/tmp/cache/containerbase",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/mix/artifacts returns null if unchanged 1`] = `
[
  {
    "cmd": "mix deps.update plug",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/mix/artifacts returns updated mix.lock 1`] = `
[
  {
    "cmd": "docker pull renovate/sidecar",
    "options": {
      "encoding": "utf-8",
    },
  },
  {
    "cmd": "docker ps --filter name=renovate_sidecar -aq",
    "options": {
      "encoding": "utf-8",
    },
  },
  {
    "cmd": "docker run --rm --name=renovate_sidecar --label=renovate_child -v "/tmp/github/some/repo":"/tmp/github/some/repo" -v "/tmp/cache":"/tmp/cache" -e BUILDPACK_CACHE_DIR -w "/tmp/github/some/repo" renovate/sidecar bash -l -c "install-tool erlang 24.3.4.2 && install-tool elixir 1.13.4 && mix deps.update plug"",
    "options": {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": {
        "BUILDPACK_CACHE_DIR": "/tmp/cache/containerbase",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;
